Página de detalles

--- a/src/html/enlaces.html
+++ b/src/html/enlaces.html
@@ -29,12 +29,17 @@
     <section>
       <div class="container">
         <h1>Enlaces</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias rem accusantium odit accusamus? Officiis ipsam sunt reiciendis, nihil exercitationem culpa voluptatem distinctio blanditiis molestias repudiandae, voluptatum ducimus. Suscipit, sunt eum.</p>
+        <p>
+          Las fuentes de información en esta página estan basados en artículos bajo la licencia Creative common 
+          <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.es_ES">Reconocimiento-CompartirIgual 3.0 Unported (CC BY-SA 3.0)</a> a no ser que se exprese lo contrario.
+          Elementos adicionales como imagenes, videos o audios estan disponibles bajo sus respectivas licencias.
+        </p>
         <div class="dis-flex justify-space-between">
           <section class="entity-subsection">
             <h2>Fuentes externas de información</h2>
             <ul>
-              <li><span><a href="https://es.wikipedia.org/wiki/Julio_C%C3%A9sar">Julio César</a>, información extraida de la Wikipedia la enciclopedia libre.</span></li>
+              <li><span><a href="https://es.wikipedia.org/wiki/Julio_C%C3%A9sar">Julio César</a>, información extraida de la <a href="https://es.wikipedia.org/wiki/Wikipedia:Portada">Wikipedia</a> la enciclopedia libre.</span></li>
+              <li><span><a href="https://es.wikipedia.org/wiki/Guerra_de_las_Galias">Guerra de las Galias</a>, información extraida de la <a href="https://es.wikipedia.org/wiki/Wikipedia:Portada">Wikipedia</a> la enciclopedia libre.</span></li>
             </ul>
           </section>
           <section class="entity-subsection">
@@ -46,10 +51,11 @@
                 incluso para uso comercial y no comercial sin permiso a no ser que se hagan uso de estas para venderlas o crear un servicio similar a Unspash.
              </p>
              <ul>
-               <li><span><a href="https://unsplash.com/photos/Y_v45vAfBEc">Estatua de Julio Caesar Augusto</a> por Nemanja Peric.</span></li>
-               <li><span><a href="https://unsplash.com/photos/UHFh9dJ9w58">Arboles verdes y campo de hierba verde durante el día</a> por Adriano Pucciarelli.</span></li>
-               <li><span><a href="https://unsplash.com/photos/ckotRXopwRM">Foto aerea del colíseo romano en Roma</a> por Spencer Davis.</span></li>
-               <li><span><a href="https://unsplash.com/photos/hSliLYLmm-c">Retrato del busto de bronce de Julio César</a> por Ilona Frey.</span></li>
+               <li><span><a href="https://unsplash.com/photos/Y_v45vAfBEc">Estatua de Julio Caesar Augusto</a> por Nemanja Peric. Imagen utilizada en el banner y en las tarjetas de la página de inicio (Tarjeta de presentación).</span></li>
+               <li><span><a href="https://unsplash.com/photos/UHFh9dJ9w58">Arboles verdes y campo de hierba verde durante el día</a> por Adriano Pucciarelli. Imagen utilizada en las tarjetas de la página de inicio (Tarjeta de enlaces).</span></li>
+               <li><span><a href="https://unsplash.com/photos/ckotRXopwRM">Foto aerea del colíseo romano en Roma</a> por Spencer Davis. Imagen utilizada en las tarjetas de la página de inicio (Tarjeta de categorias).</span></li>
+               <li><span><a href="https://unsplash.com/photos/hSliLYLmm-c">Retrato del busto de bronce de Julio César</a> por Ilona Frey. Imagen utilizada en la página de presentación.</span></li>
+               <li><span><a href="https://unsplash.com/photos/Tm0urvAW044">Colíseo, Roma</a> por Mauricio Artieda. Imagen utilizada en el banner.</span></li>
              </ul>
             </div>
 
@@ -59,7 +65,18 @@
                 Todas las imagenes utilizadas han sido bajo su respectiva licencia recogida en la página de Wikimedia Commons.
              </p>
              <ul>
-               <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:SPQR.svg">SPQR.svg</a> por Amadscientist (Mark Miller). Imagen en el dominio publico.</span></li>
+               <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:SPQR.svg">SPQR.svg</a> por Amadscientist (Mark Miller). Imagen en el dominio publico. Imágen utilizada en el logo y favicon de la página.</span></li>
+               <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:Siege-alesia-vercingetorix-jules-cesar.jpg">Siege-alesia-vercingetorix-jules-cesar.jpg</a>. 
+                  Cuadro: Vercingétorix arroja sus armas a los pies de Julio César por Lionel Noel Royer (1899). Imagen en el dominio publico por fallecimiento del autor, segun la ley de
+                  Copyright de su país de origen (Francia) y según la a Ley de 10 de enero de 1879 sobre Propiedad Intelectual de España. 
+                  Imágen utilizada en la tarjeta <strong>Guerra de las Galias</strong> y en la página de detalle de La Guerra de las Galias.</span></li>
+                <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:Caesar_campaigns_gaul-en.svg">Caesar campaigns gaul-en.svg</a> por Sémhur. Obra derivada de
+                    File:<a href="https://commons.wikimedia.org/wiki/File:Caesar_campaigns_gaul-fr.svg">Caesar campaigns gaul-fr.svg</a> por historicair. Ambas imagenes
+                    pueden ser usadas, copiadas y adaptadas de forma gratis bajo la licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.es_ES">Reconocimiento-CompartirIgual 3.0 Unported (CC BY-SA 3.0)</a>
+                    y <a href="https://en.wikipedia.org/wiki/GNU_Free_Documentation_License">GNU Free Documentation License</a> (licencia Copyleft).</span></li>
+                <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:Cesare_prima_Gallia_58_a.C.jpg">Cesare prima Gallia 58 a.C.jpg</a> por Cristiano64. Imagen
+                  puede ser usada, copiada y adaptada de forma gratis bajo la licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.es_ES">Reconocimiento-CompartirIgual 3.0 Unported (CC BY-SA 3.0)</a>
+                  y <a href="https://en.wikipedia.org/wiki/GNU_Free_Documentation_License">GNU Free Documentation License</a> (licencia Copyleft).</span></li>
              </ul>
             </div>
           </section>
@@ -70,6 +87,10 @@
   <footer>
     <div class="container">
       <p>Trabajo realizado por Dídac Ortega Escalera. Asignatura: Herramientas HTML y CSS</p>
+      <div class="dis-flex mt-16 justify-center">
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+        <p>El texto está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</p>
+      </div>
     </div>
   </footer>
 </body>
