--- a/src/html/presentacion.html
+++ b/src/html/presentacion.html
@@ -43,8 +43,7 @@
             <img class="image-height" src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
             <figcaption><span>Estatua de bronce desgastado sobre Julio César.</span></figcaption>
           </figure>
-          <p>Todo el trabajo realizado en este portal ha sido extraido de fuentes externas y ha sido sintetizado de forma
-            que ayude al lector a conocer más sobre él. Si quieres profundizar y saber más, en este lugar podras encontrar <a href="./enlaces.html">enlaces</a> a todas las fuentes en las que se ha 
+          <p>Todo el trabajo realizado e información usada en este portal ha sido extraido de fuentes externas. Si quieres profundizar y saber más, en este lugar podras encontrar <a href="./enlaces.html">enlaces</a> a todas las fuentes en las que se ha 
             basado nuestro trabajo.
           </p>
       </div>
@@ -53,6 +52,10 @@
   <footer>
     <div class="container">
       <p>Trabajo realizado por Dídac Ortega Escalera. Asignatura: Herramientas HTML y CSS</p>
+      <div class="dis-flex mt-16 justify-center">
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+        <p>El texto está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">licencia de Creative Commons Reconocimiento-CompartirIgual 4.0 Internacional</a>.</p>
+      </div>
     </div>
   </footer>
 </body>
