--- a/src/html/enlaces.html
+++ b/src/html/enlaces.html
@@ -54,7 +54,7 @@
                <li><span><a href="https://unsplash.com/photos/Y_v45vAfBEc">Estatua de Julio Caesar Augusto</a> por Nemanja Peric. Imagen utilizada en el banner y en las tarjetas de la página de inicio (Tarjeta de presentación).</span></li>
                <li><span><a href="https://unsplash.com/photos/UHFh9dJ9w58">Arboles verdes y campo de hierba verde durante el día</a> por Adriano Pucciarelli. Imagen utilizada en las tarjetas de la página de inicio (Tarjeta de enlaces).</span></li>
                <li><span><a href="https://unsplash.com/photos/ckotRXopwRM">Foto aerea del colíseo romano en Roma</a> por Spencer Davis. Imagen utilizada en las tarjetas de la página de inicio (Tarjeta de categorias).</span></li>
-               <li><span><a href="https://unsplash.com/photos/hSliLYLmm-c">Retrato del busto de bronce de Julio César</a> por Ilona Frey. Imagen utilizada en la página de presentación.</span></li>
+               <li><span><a href="https://unsplash.com/photos/hSliLYLmm-c">Retrato del busto de bronce de Julio César</a> por Ilona Frey. Imagen utilizada en la página de presentación y en el banner.</span></li>
                <li><span><a href="https://unsplash.com/photos/Tm0urvAW044">Colíseo, Roma</a> por Mauricio Artieda. Imagen utilizada en el banner.</span></li>
              </ul>
             </div>
