--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,8 +27,18 @@
   </header>
   <main>
     <section class="entity-banner-section">
-      <figure>
-        <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+      <figure class="keen-slider__slide--grey-background">
+        <div id="slider-banner" class="keen-slider">
+          <div class="keen-slider__slide">
+            <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+          </div>
+          <div class="keen-slider__slide">
+            <img src="../static/rome-colosseum.jpg" alt="Estatua de Julio César en Roma">
+          </div>
+          <div class="keen-slider__slide">
+            <img src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
+          </div>
+        </div>
         <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
       </figure>
     </section>
@@ -94,15 +104,3 @@
   </footer>
 </body>
 </html>
-
-      <!-- <figure>
-        <div id="slider" class="keen-slider">
-          <div class="keen-slider__slide">
-            <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
-          </div>
-          <div class="keen-slider__slide">
-            <img src="../static/rome-colosseum.jpg" alt="Estatua de Julio César en Roma">
-          </div>
-        </div>
-        <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
-      </figure> -->
