--- a/src/html/detalles/guerra-galias.html
+++ b/src/html/detalles/guerra-galias.html
@@ -262,9 +262,10 @@
           </ul>
         </section>
         <section class="mb-50">
-          <h2>Artículos del portal biográfico relacionados</h2>
+          <h2>Artículos relacionados sobre campañas militares</h2>
           <ul>
-            <li><a href="#"><span>Invasiones de Britania por César</span></a></li>
+            <li><a href=""><span>Invasiones de Britania por César</span></a></li>
+            <li><a href=""><span>Guerra civil</span></a></li>
           </ul>
         </section>
       </div>
