--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,23 +27,8 @@
   </header>
   <main>
     <section class="entity-banner-section">
-      <!-- <figure class="keen-slider__slide--grey-background">
-        <div id="slider-banner" class="keen-slider">
-          <div class="keen-slider__slide">
-            <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
-          </div>
-          <div class="keen-slider__slide">
-            <img src="../static/rome-colosseum.jpg" alt="Estatua de Julio César en Roma">
-          </div>
-          <div class="keen-slider__slide">
-            <img src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
-          </div>
-        </div>
-        <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
-      </figure> -->
-
       <figure>
-        <div id="slider-banner" class="keen-slider">
+        <div id="slider-banner">
           <div class="slider__slide--grey-background">
             <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
           </div>
