--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,7 +39,7 @@
             <img src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
           </div>
         </div>
-        <figcaption class="container"><div><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
+        <figcaption class="container"><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
       </figure>
     </section>
 
