--- a/src/html/enlaces.html
+++ b/src/html/enlaces.html
@@ -8,13 +8,18 @@
 
   <link rel="stylesheet" href="../css/styles.css" />
   <script type="module" src="../js/app.js"></script>
-  <link rel="icon" href="../static/logo.svg" type="image/x-icon" />
+  <link rel="icon" href="../static/spqr-logo.svg" type="image/x-icon" />
 </head>
 <body>
   <header class="mb-50">
     <div class="container">
       <div>
-        <a href="index.html"><img class="logo" src="../static/logo.svg" alt="Logo"></a>
+        <div class="logo-container">
+          <a href="index.html"><img class="logo" src="../static/page-logo.svg" alt="Logo"></a>
+        </div>
+        <p class="page-title">
+          Portal biográfico
+        </p>
       </div>
       <nav>
         <ul class="dis-flex">
@@ -77,6 +82,8 @@
                 <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:Cesare_prima_Gallia_58_a.C.jpg">Cesare prima Gallia 58 a.C.jpg</a> por Cristiano64. Imagen
                   puede ser usada, copiada y adaptada de forma gratis bajo la licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.es_ES">Reconocimiento-CompartirIgual 3.0 Unported (CC BY-SA 3.0)</a>
                   y <a href="https://en.wikipedia.org/wiki/GNU_Free_Documentation_License">GNU Free Documentation License</a> (licencia Copyleft).</span></li>
+                <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:Olive_wreath.svg">Olive wreath.svg</a> por Indolences. Imagen en el dominio publico. Imágen utilizada como elemento SVG en linea en el HTML para realizar una animación.
+                  Se ha modificado el orden y agrupado los path para realizar una animación ordenada.</span></li>
              </ul>
             </div>
           </section>
@@ -86,6 +93,15 @@
   </main>
   <footer>
     <div class="container">
+      <div class="footer-image">
+      </div>
+      <div>
+        <ul class="dis-flex justify-center">
+          <li><a href="./categorias.html">Categorias</a></li>
+          <li><a href="./presentacion.html">Presentación</a></li>
+          <li><a href="./enlaces.html">Enlaces</a></li>
+        </ul>
+      </div>
       <p>Trabajo realizado por Dídac Ortega Escalera. Asignatura: Herramientas HTML y CSS</p>
       <div class="dis-flex mt-16 justify-center">
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
