--- a/src/html/detalles/guerra-galias.html
+++ b/src/html/detalles/guerra-galias.html
@@ -8,13 +8,18 @@
 
   <link rel="stylesheet" href="../../css/styles.css" />
   <script type="module" src="../../js/app.js"></script>
-  <link rel="icon" href="../../static/logo.svg" type="image/x-icon" />
+  <link rel="icon" href="../../static/spqr-logo.svg" type="image/x-icon" />
 </head>
 <body>
   <header class="mb-50">
     <div class="container">
       <div>
-        <a href="../index.html"><img class="logo" src="../../static/logo.svg" alt="Logo"></a>
+        <div class="logo-container">
+          <a href="../index.html"><img class="logo" src="../../static/page-logo.svg" alt="Logo"></a>
+        </div>
+        <p class="page-title">
+          Portal biográfico
+        </p>
       </div>
       <nav>
         <ul class="dis-flex">
@@ -273,6 +278,15 @@
   </main>
   <footer>
     <div class="container">
+      <div class="footer-image">
+      </div>
+      <div>
+        <ul class="dis-flex justify-center">
+          <li><a href="../categorias.html">Categorias</a></li>
+          <li><a href="../presentacion.html">Presentación</a></li>
+          <li><a href="../enlaces.html">Enlaces</a></li>
+        </ul>
+      </div>
       <p>Trabajo realizado por Dídac Ortega Escalera. Asignatura: Herramientas HTML y CSS</p>
       <div class="dis-flex mt-16 justify-center">
         <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img class="img-license" alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
