resolution switch dpi

--- a/src/html/presentacion.html
+++ b/src/html/presentacion.html
@@ -87,8 +87,11 @@
             las campañas militares en las que participo, como la guerra de las Galias, las batallas que libro y la crisis política
             que desencadeno en una guerra civil contra uno de los miembros del triunvirato.
           </p>
-          <figure>
-            <img class="image-height" src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
+          <figure class="fixed-image-width">
+            <img srcset="../static/pagina-presentacion/julius-caesar-340w.jpg,
+              ../static/pagina-presentacion/julius-caesar-510w.jpg 1.5x,
+              ../static/pagina-presentacion/julius-caesar-680w.jpg 2x"
+              src="../static/pagina-presentacion/julius-caesar-680w.jpg" alt="Perfil de bronce de Julio César">
             <figcaption><span>Estatua de bronce desgastado sobre Julio César.</span></figcaption>
           </figure>
           <p>Todo el trabajo realizado e información usada en este portal ha sido extraido de fuentes externas. Si quieres profundizar y saber más, en este lugar podras encontrar <a href="./enlaces.html">enlaces</a> a todas las fuentes en las que se ha 
