--- a/src/html/presentacion.html
+++ b/src/html/presentacion.html
@@ -88,7 +88,7 @@
             que desencadeno en una guerra civil contra uno de los miembros del triunvirato.
           </p>
           <figure class="fixed-image-width">
-            <img srcset="../static/pagina-presentacion/julius-caesar-340w.jpg, ../static/pagina-presentacion/julius-caesar-510w.jpg 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg 2x"
+            <img srcset="../static/pagina-presentacion/julius-caesar-340w.jpg 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg 2x"
               src="../static/pagina-presentacion/julius-caesar-680w.jpg" alt="Perfil de bronce de Julio César">
             <figcaption><span>Estatua de bronce desgastado sobre Julio César.</span></figcaption>
           </figure>
