Details and presentation

--- a/src/html/enlaces.html
+++ b/src/html/enlaces.html
@@ -84,6 +84,9 @@
                   y <a href="https://en.wikipedia.org/wiki/GNU_Free_Documentation_License">GNU Free Documentation License</a> (licencia Copyleft).</span></li>
                 <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:Olive_wreath.svg">Olive wreath.svg</a> por Indolences. Imagen en el dominio publico. Imágen utilizada como elemento SVG en linea en el HTML para realizar una animación.
                   Se ha modificado el orden y agrupado los path para realizar una animación ordenada.</span></li>
+                <li><span>File:<a href="https://commons.wikimedia.org/wiki/File:Cesare_dopo_Gallia_50_a.C..jpg">Cesare dopo Gallia 50 a.C..jpg</a> por Cristiano64. Imagen
+                  puede ser usada, copiada y adaptada de forma gratis bajo la licencia <a href="https://creativecommons.org/licenses/by-sa/3.0/deed.es_ES">Reconocimiento-CompartirIgual 3.0 Unported (CC BY-SA 3.0)</a>
+                  y <a href="https://en.wikipedia.org/wiki/GNU_Free_Documentation_License">GNU Free Documentation License</a> (licencia Copyleft).</span></li>
              </ul>
             </div>
           </section>
