--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,13 +35,13 @@
       <figure>
         <div id="slider-banner">
           <div class="slider__slide--grey-background">
-            <img src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
+            <img class="img-responsive" src="../static/statue-julius-caesar.jpg" alt="Estatua de Julio César en Roma">
           </div>
           <div class="slider__slide--grey-background">
-            <img src="../static/rome-colosseum.jpg" alt="Estatua de Julio César en Roma">
+            <img class="img-responsive" src="../static/rome-colosseum.jpg" alt="Estatua de Julio César en Roma">
           </div>
           <div class="slider__slide--grey-background">
-            <img src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
+            <img class="img-responsive" src="../static/julius-caesar.jpg" alt="Perfil de bronce de Julio César">
           </div>
         </div>
         <figcaption class="container"><h1 class="container">Conoce a Julio César, creador del poderoso Imperio Romano</h1></figcaption>
