--- a/src/html/presentacion.html
+++ b/src/html/presentacion.html
@@ -88,8 +88,14 @@
             que desencadeno en una guerra civil contra uno de los miembros del triunvirato.
           </p>
           <figure class="fixed-image-width">
-            <img srcset="../static/pagina-presentacion/julius-caesar-340w.jpg 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg 2x"
+            <!-- <picture>
+              <source srcset="../static/pagina-presentacion/julius-caesar-340w.jpg?as=avif 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg?as=avif 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg?as=avif 2x" type="image/avif" />
+              <source srcset="../static/pagina-presentacion/julius-caesar-340w.jpg?as=webp 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg?as=webp 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg?as=webp 2x" type="image/webp" />
+              <img srcset="../static/pagina-presentacion/julius-caesar-340w.jpg 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg 2x"
               src="../static/pagina-presentacion/julius-caesar-680w.jpg" alt="Perfil de bronce de Julio César">
+            </picture> -->
+            <img class="img-responsive" srcset="../static/pagina-presentacion/julius-caesar-340w.jpg 1x, ../static/pagina-presentacion/julius-caesar-510w.jpg 1.5x, ../static/pagina-presentacion/julius-caesar-680w.jpg 2x"
+            src="../static/pagina-presentacion/julius-caesar-680w.jpg" alt="Perfil de bronce de Julio César">
             <figcaption><span>Estatua de bronce desgastado sobre Julio César.</span></figcaption>
           </figure>
           <p>Todo el trabajo realizado e información usada en este portal ha sido extraido de fuentes externas. Si quieres profundizar y saber más, en este lugar podras encontrar <a href="./enlaces.html">enlaces</a> a todas las fuentes en las que se ha 
