--- a/src/html/detalles/guerra-galias.html
+++ b/src/html/detalles/guerra-galias.html
@@ -96,8 +96,14 @@
           </p>
           <figure>
             <img 
-              sizes="(max-width: 575px) 416px, (max-width: 768px) 489px, (max-width: 1199px) 584px, 855px"
-              srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-416w.jpg 416w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-489w.jpg 489w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-584w.jpg 584w, ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-855w.jpg 855w"
+              sizes="(max-width: 575px) 416px,
+                     (max-width: 768px) 489px,
+                     (max-width: 1199px) 584px,
+                     855px"
+              srcset="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-416w.jpg 416w,
+                      ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-489w.jpg 489w,
+                      ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-584w.jpg 584w, 
+                      ../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-855w.jpg 855w"
               src="../../static/pagina-detalles/guerra-galias/imagen-cesare-prima/cesare-prima-58ac-855w.jpg" 
               alt="Mapa del mundo romano antes de la conquista de la Galia">
             <!-- <img class="image-height" src="../../static/guerra-galias/Cesare_prima_Gallia_58_a.C.jpg" alt="Mapa del mundo romano"> -->
