Category page images

--- a/src/html/categorias.html
+++ b/src/html/categorias.html
@@ -43,7 +43,14 @@
           <div class="dis-flex flex-wrap">
             <div class="card-container card-appearance-categories">
               <div class="card">
-                <img class="card__image" src="../static/guerra-galias/Siege-alesia-vercingetorix-jules-cesar.jpg" alt="Vercingétorix deponiendo sus armas">
+                <picture>
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-382w.jpg" media="(min-width: 992px)" />
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-740w.jpg" media="(min-width: 769px)" />
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-650w.jpg" media="(min-width: 576px)" />
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-550w.jpg" media="(min-width: 442px)" />
+                  <source srcset="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-415w.jpg" media="(max-width: 441px)" />
+                  <img class="w-100 card__image" src="../static/pagina-categorias/guerra-galias-card/siege-alesia-vercingetorix-cesar-550w.jpg" alt="Enceuntro entre Vercingetórix y César depués del asedio de Alesia">        
+                </picture>
                 <div class="card__text">
                   <h3 class="card__title">Guerra de las Galias</h3>
                   <p class="card__description">Conflicto militar entre el cónsul Julio César y las tribus galas entre los años 58 a.c y 51 a.c. Culmino en la batalla de Alesia en el año 52 a.c. con la conquista completa
