Art dirction images for cards

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -64,7 +64,16 @@
 
         <div class="card-container slide-left-index first-card-index">
           <div class="card">
-            <img class="card__image" src="../static/card-image/ancient-rome.jpg" alt="Vista aerea del coliseo romano">
+            <picture>
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-375w.jpg" media="(min-width: 1200px)" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-255w.jpg" media="(min-width: 992px)" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-740w.jpg" media="(min-width: 769px)" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-650w.jpg" media="(min-width: 576px)" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-550w.jpg" media="(min-width: 442px)" />
+              <source srcset="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-415w.jpg" media="(max-width: 441px)" />
+              <img class="card__image" src="../static/pagina-inicio/cards/card-categorias/aereal-view-coloseum-415w.jpg" alt="Vista aerea del coliseo romano">
+            </picture>
+            <!-- <img class="card__image" src="../static/card-image/ancient-rome.jpg" alt="Vista aerea del coliseo romano"> -->
             <div class="card__text">
               <h2 class="card__title">Categorias</h2>
               <p class="card__description">Descubre más sobre la vida y gestas de uno de los gombres más importantes de la antigua Roma, Julio César.</p>
@@ -75,7 +84,16 @@
 
         <div class="card-container second-card-index">
           <div class="card">
-            <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="Estatu de bronze de Julio César">
+            <picture>
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-375w.jpg" media="(min-width: 1200px)" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-255w.jpg" media="(min-width: 992px)" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-740w.jpg" media="(min-width: 769px)" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-650w.jpg" media="(min-width: 576px)" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-550w.jpg" media="(min-width: 442px)" />
+              <source srcset="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-415w.jpg" media="(max-width: 441px)" />
+              <img class="card__image" src="../static/pagina-inicio/cards/card-presentacion/statue-julius-caesar-415w.jpg" alt="Estatua de bronze de Julio César">
+            </picture>
+            <!-- <img class="card__image" src="../static/statue-julius-caesar.jpg" alt="Estatu de bronze de Julio César"> -->
             <div class="card__text">
               <h2 class="card__title">Presentación</h2>
               <p class="card__description">Conoce que hacemos y conoce quien fue Julio César.</p>
@@ -86,7 +104,16 @@
         
         <div class="card-container slide-right-index third-card-index">
           <div class="card">
-            <img class="card__image" src="../static/card-image/roman-road.jpg" alt="Carretera romana">
+            <picture>
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-375w.jpg" media="(min-width: 1200px)" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-255w.jpg" media="(min-width: 992px)" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-740w.jpg" media="(min-width: 769px)" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-650w.jpg" media="(min-width: 576px)" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-550w.jpg" media="(min-width: 442px)" />
+              <source srcset="../static/pagina-inicio/cards/card-enlaces/roman-road-415w.jpg" media="(max-width: 441px)" />
+              <img class="card__image" src="../static/pagina-inicio/cards/card-enlaces/roman-road-415w.jpg" alt="Carretera romana">
+            </picture>
+            <!-- <img class="card__image" src="../static/card-image/roman-road.jpg" alt="Carretera romana"> -->
             <div class="card__text">
               <h2 class="card__title">Enlaces</h2>
               <p class="card__description">¿Quieres saber más? Lee las fuentes en las que se basa nuestro trabajo.</p>
