added clip path extra elements

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -58,7 +58,7 @@
         <button id="read-more-button" >Leer más</button><i id="rm-icon" class="not-active"></i>
       </div>
     </section>
-    <section class="entity-card-section m-0">
+    <section class="entity-card-section">
       <!--CARDS-->
       <div class="container dis-flex justify-space-around">
 
@@ -123,8 +123,23 @@
 
         </div>
       </div>
-      <div class="container w-100">
-        <img class="column-clip" src="../static/rome-colosseum.jpg" alt="Colíseo de Roma">
+
+    </section>
+
+    <section class="entity-last-added-article m-0">
+      <div class="container">
+        <h1>Ultimos articulos</h1>
+        <div class="article-added">
+          <div class="article-added__body-text">
+            <div class="article-added__description">
+              <h2 class="mb-8">La guerra de las Galias</h2>
+              <p class="mb-14">Conflicto militar entre el cónsul Julio César y las tribus galas entre los años 58 a.c y 51 a.c. Culmino en la batalla de Alesia en el año 52 a.c. con la conquista completa
+                de la Galia (Francia moderna).</p>
+                <a class="article-added__button" href="./detalles/guerra-galias.html"><span>Saber más</span></a>
+            </div>
+          </div>
+          <img class="column-clip m-0 w-100" src="../static/pagina-detalles/guerra-galias/imagen-destacada/siege-alesia-vercingetorix-cesar-1100w.jpg" alt="Colíseo de Roma">
+        </div>
       </div>
     </section>
   </main>
